--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Eax</h1>
+      <h1 class="project-name">EAX - Easy Ajax</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/ezekmoraes/eax" class="btn">Ver no GitHub</a>
       <a href="https://github.com/ezekmoraes/eax/zipball/master" class="btn">Baixar .zip</a>
