--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <h1 class="project-name">EAX - Easy Ajax</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/ezekmoraes/eax" class="btn">Ver no GitHub</a>
-      <a href="https://github.com/ezekmoraes/eax/zipball/master" class="btn">Baixar .zip</a>
-      <a href="https://github.com/ezekmoraes/eax/tarball/master" class="btn">Baixar .tar.gz</a>
+      <a href="https://raw.githubusercontent.com/ezekmoraes/eax/gh-pages/eax/eax-1.0.min.js" class="btn">Baixar</a>
       <a href="http://eax.16mb.com/" class="btn">Demo</a>      
     </section>
 
