--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@ progress(function() {
 
 <h3>Exemplo</h3>
 <p>Primerio crie uma página importantado a API EAX.<br>
-index.html <br>
+<b>index.html</b> <br>
 <script src="https://gist.github.com/ezekmoraes/769d8de94fe40bc37aca.js"></script>
 </p>
 <br>
 <p>Depois implemente um script com as funções do EAX. <br>
-app.js <br>
+<b>app.js</b> <br>
 <script src="https://gist.github.com/ezekmoraes/46b9fe5216302ed904f6.js"></script>
 </p>
 <br>
 <p>
 Faça seu back-end para testar a requisição de POST. No caso, crie um arquivo para gravar as informações que vão ser pegas no GET.<br>
-post.php <br>
+<b>post.php</b>  <br>
 <script src="https://gist.github.com/ezekmoraes/1d96a5ace3ecc46a9e8f.js"></script>
 </p>
 
